<resources>
    <string name="app_name">FAV-deal</string>
    <!-- ************** 底部导航 ****************** -->
    <string name="homePage">&#xe625;</string>
    <string name="homePageText">主页</string>
    <string name="deliver">&#xe611;</string>
    <string name="deliverText">物流</string>
    <string name="cart">&#xe660;</string>
    <string name="cart_Text">购物车</string>
    <string name="center">&#xe608;</string>
    <string name="centerText">我的</string>

    <string name="titleBarLeft">&#xe60a;</string>
    <string name="titleBarRight">&#xe630;</string>
    <string name="titleBarAdd">&#xe669;</string>

    <string name="phone">&#xe667;</string>

    <string name="center_myorder">&#xe64b;</string>
    <string name="center_xianpin">&#xe62f;</string>
    <string name="center_member">&#xe608;</string>
    <string name="center_invite">&#xe684;</string>
    <string name="center_jifen">&#xe629;</string>
    <string name="center_joinus">&#xe603;</string>


    <string name="edit">&#xe615;</string>
    <string name="cancle">&#xe673;</string>
    <string name="icon_delete">&#xe663;</string>

    <string name="icon_tag">&#xe64d;</string>

    <string-array name="home_title">
        <item>水果</item>
        <item>蔬菜</item>
        <item>推荐</item>
    </string-array>
    <string-array name="slide_fruit">
        <item>菠萝</item>
        <item>草莓</item>
        <item>橙子</item>
        <item>哈密瓜</item>
        <item>火龙果</item>
        <item>橘子</item>
        <item>梨</item>
        <item>荔枝</item>
        <item>芒果</item>
        <item>猕猴桃</item>
        <item>木瓜</item>
        <item>柠檬</item>
        <item>苹果</item>
        <item>葡萄</item>
        <item>其他</item>
    </string-array>
    <string-array name="slide_veg">
        <item>山竹</item>
        <item>桃</item>
        <item>甜瓜</item>
        <item>西瓜</item>
        <item>西红柿</item>
        <item>香蕉</item>
        <item>椰子</item>
        <item>樱桃</item>
        <item>柚子</item>
    </string-array>
</resources>
