<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#FFD040"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textStyle="bold"
            android:textSize="25sp"
            android:textColor="#030303"
            android:gravity="center"
            android:layout_centerInParent="true"
            android:text="@string/cart_Text"/>
        <com.example.qsr.fav_deal.ui.IconFontTextView
            android:id="@+id/edit"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_marginRight="5dp"
            android:text="@string/edit"/>
        <com.example.qsr.fav_deal.ui.IconFontTextView
            android:visibility="gone"
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_marginRight="5dp"
            android:text="@string/cancle"/>
    </RelativeLayout>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/cart_recyclerView"
        android:layout_width="match_parent"
        android:layout_weight="7"
        android:layout_height="0dp" />
    <View
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>
    <LinearLayout
        android:id="@+id/norBar"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <LinearLayout
            android:layout_weight="2"
            android:layout_width="0dp"
            android:orientation="vertical"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/sumMoney"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginLeft="10dp"
                android:textSize="20sp"
                android:textColor="#FF7B23"
                android:textStyle="bold"
                android:text="实付:￥35.63"/>
            <TextView
                android:id="@+id/discount"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginLeft="10dp"
                android:textSize="16sp"
                android:textColor="@android:color/darker_gray"
                android:text="原价总计:￥35.63 优惠：￥0.00"/>
        </LinearLayout>
        <TextView
            android:id="@+id/check"
            android:background="#FF602C"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:text="去结算"
            android:textColor="#ffffff"
            android:gravity="center"
            android:textSize="18sp"
            android:layout_height="match_parent" />
    </LinearLayout>
    <LinearLayout
        android:visibility="gone"
        android:id="@+id/deleteAll"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <TextView
            android:id="@+id/clearAllCart"
            android:background="#FF602C"
            android:layout_width="match_parent"
            android:text="一键清空"
            android:textColor="#ffffff"
            android:gravity="center"
            android:textSize="18sp"
            android:layout_height="match_parent" />
    </LinearLayout>
</LinearLayout>